manifests/bootstrapping/00-argocd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: core
  name: core
