manifests/bootstrapping/00-argocd/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-public
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.pantheon.schouten-lebbing.nl,argocd.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  sessionAffinity: None
# ---
# apiVersion: externaldns.k8s.io/v1alpha1
# kind: DNSEndpoint
# metadata:
#   name: argocd-server-public
# spec:
#   endpoints:
#   - dnsName: argocd.pantheon.schouten-lebbing.nl
#     recordTTL: 300
#     recordType: CNAME
#     targets:
#     - danmanners.com
