manifests/bootstrapping/00-argocd/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.pantheon.schouten-lebbing.nl`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
    - match: Host(`argo.pantheon.schouten-lebbing.nl`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-k3s-cert
